# Simple-Z-Language

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
examples/: a-comments-and-preprocessor.szl  b-main-function.szl  c-variables.szl  d-conversion.szl  e-number-bases.szl  f-mathematical-and-logical-operations.szl  g-boolean-values.szl  h-if.szl  i-while.szl  j-for.szl  k-pointers.szl  l-memory-management.szl  m-objects.szl  n-lock-unlock.szl  o-io.szl  p-functions.szl
inc/SZAMAN/: SZAMAN.hpp
res/: float.szl  list.szl  pow.szl  sqrt.szl  stdszllib.ia
src/: main.cpp
src/Code/: Code.cpp  Code.hpp
src/CommonFunctions/: CommonFunctions.cpp  CommonFunctions.hpp
src/Compiler/: Compiler.cpp  Compiler.hpp
src/Function/: Function.cpp  Function.hpp
src/Grammar/: Grammar.cpp  Grammar.hpp
src/NextUniqueId/: NextUniqueId.cpp  NextUniqueId.hpp
src/Object/: Object.cpp  Object.hpp
src/Rules/: Rule.cpp  Rule.hpp  RuleBracket.cpp  RuleBracket.hpp  RuleComment.cpp  RuleComment.hpp  RuleIdentifier.cpp  RuleIdentifier.hpp  RuleKeyword.cpp  RuleKeyword.hpp  RuleLiteral.cpp  RuleLiteral.hpp  RulePunctuation.cpp  RulePunctuation.hpp  RuleWhitespace.cpp  RuleWhitespace.hpp
src/SZLException/: SZLException.cpp  SZLException.hpp
src/Scope/: Scope.cpp  Scope.hpp
src/Tables/: Tables.cpp  Tables.hpp
src/Variable/: Variable.cpp  Variable.hpp
